style.css
html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}
.grid {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
  gap: 10px;
  width: 100%;
  height: 100%;
}
.red {
  background-color: #ef4444;
}
.blue {
  background-color: #3b82f6;
}
.black {
  background-color: #0f172a;
}
.gray {
  background-color: #e2e8f0;
}
.green {
  background-color: #10b981;
}
.yellow {
  background-color: #facc15;
}
.one {
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 2;
  grid-row-end: 8;
}
.two {
  grid-column-start: 5;
  grid-column-end: 6;
  grid-row-start: 2;
  grid-row-end: 10;
}
.three {
  grid-column-start: 6;
  grid-column-end: 10;
  grid-row-start: 6;
  grid-row-end: 10;
}
.four {
  grid-column-start: 6;
  grid-column-end: 8;
  grid-row-start: 2;
  grid-row-end: 6;
}
.five {
  grid-column-start: 8;
  grid-column-end: 10;
  grid-row-start: 2;
  grid-row-end: 6;
}
.six {
  grid-column-start: 8;
  grid-column-end: 10;
  grid-row-start: 2;
  grid-row-end: 6;
}
.seven {
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 8;
  grid-row-end: 10;
}

